// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders for accepted step 1`] = `
<Component
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#A0A2A6",
            "fontSize": 14,
            "fontWeight": "bold",
            "letterSpacing": 1,
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="REMOVE STEP"
        type="transparent"
      />
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  >
    Step of Faith
  </MyText>
  <Connect(Translate(ReminderButton)) />
  <Component
    flex={1}
  />
  <BottomButton
    onPress={[Function]}
    text="I Did It!"
  />
</Component>
`;

exports[`render renders for accepted step with tip 1`] = `
<Component
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#A0A2A6",
            "fontSize": 14,
            "fontWeight": "bold",
            "letterSpacing": 1,
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="REMOVE STEP"
        type="transparent"
      />
    }
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  >
    Step of Faith
  </MyText>
  <Connect(Translate(ReminderButton)) />
  <Component
    flex={1}
  >
    <ScrollView
      style={
        Object {
          "marginVertical": 26,
          "paddingBottom": 14,
          "paddingHorizontal": 32,
        }
      }
    >
      <Markdown
        blacklist={Array []}
        rules={Object {}}
        styles={
          Object {
            "heading1": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontWeight": "300",
              "lineHeight": 30,
            },
            "listItemBullet": Object {
              "alignSelf": "flex-start",
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "lineHeight": 26,
              "paddingRight": 16,
            },
            "strong": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 26,
            },
            "text": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            },
          }
        }
        whitelist={Array []}
      >
        Accepted Step Tip
      </Markdown>
    </ScrollView>
  </Component>
  <BottomButton
    onPress={[Function]}
    text="I Did It!"
  />
</Component>
`;

exports[`render renders for completed step 1`] = `
<Component
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    center={
      <MyText
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Completed Step
      </MyText>
    }
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={false}
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  >
    Step of Faith
  </MyText>
  <Connect(Translate(ReminderButton)) />
  <Component
    flex={1}
  />
</Component>
`;

exports[`render renders for suggested step 1`] = `
<Component
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    center={false}
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={false}
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  />
  <Connect(Translate(ReminderButton)) />
  <Component
    flex={1}
  />
  <BottomButton
    onPress={[Function]}
    text="Add to My Steps"
  />
</Component>
`;

exports[`render renders for suggested step with tip 1`] = `
<Component
  flex={1}
  style={
    Object {
      "backgroundColor": "#ffffff",
    }
  }
>
  <Connect(Header)
    center={false}
    left={
      <Connect(BackButton)
        iconStyle={
          Object {
            "color": "#A0A2A6",
          }
        }
      />
    }
    right={false}
    shadow={false}
    style={
      Object {
        "backgroundColor": "#ffffff",
      }
    }
  />
  <MyText
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "fontSize": 32,
        "fontWeight": "300",
        "lineHeight": 38,
        "marginHorizontal": 32,
        "marginVertical": 26,
      }
    }
  />
  <Connect(Translate(ReminderButton)) />
  <Component
    flex={1}
  >
    <ScrollView
      style={
        Object {
          "marginVertical": 26,
          "paddingBottom": 14,
          "paddingHorizontal": 32,
        }
      }
    >
      <Markdown
        blacklist={Array []}
        rules={Object {}}
        styles={
          Object {
            "heading1": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontWeight": "300",
              "lineHeight": 30,
            },
            "listItemBullet": Object {
              "alignSelf": "flex-start",
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "lineHeight": 26,
              "paddingRight": 16,
            },
            "strong": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 26,
            },
            "text": Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "lineHeight": 26,
            },
          }
        }
        whitelist={Array []}
      >
        Suggested Step Tip
      </Markdown>
    </ScrollView>
  </Component>
  <BottomButton
    onPress={[Function]}
    text="Add to My Steps"
  />
</Component>
`;
